# tutho

./: .gitignore  README.md  app.py  dev-app.py  dev_app.py  main.py  pyproject.toml  requirements.txt
curriculum/: caps-maths-gr12.json
src/: base_client.py  db.py  local_client.py  mastery.py  ollama_client.py  router.py  server.py  transformers_client.py
src/prompts/: answer.j2  classifier.j2  greeting.j2  off_topic.j2  tutor.j2
src/tools/: curriculum.py  definitions.py  registry.py
tests/: test_classifier.py  test_learn.py
